[package]
name = "rioterm"
description = "Rio terminal is a hardware-accelerated GPU terminal emulator, focusing to run in desktops and browsers."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[[bin]]
name = "rio"
path = "src/main.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
wgpu = { workspace = true }
rio-backend = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitflags = { workspace = true }
futures = { workspace = true }
corcovado = { workspace = true }
regex = { workspace = true }
raw-window-handle = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
notify = "7.0.0"
rustc-hash = { workspace = true }
image_rs = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
teletypewriter = { workspace = true }
unicode-width = { workspace = true }
copa = { workspace = true }
url = { workspace = true }
rio-window = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { workspace = true }

[target.'cfg(windows)'.dependencies]
ahash = { version = "0.8.2", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }
windows-sys = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}

[features]
default = ["wayland", "x11"]
x11 = [
    "rio-backend/x11",
    "rio-window/x11"
]
wayland = [
    "rio-backend/wayland",
    "rio-window/wayland",
    "rio-window/wayland-dlopen",
]

# "rio-window/wayland-csd-adwaita-crossfont",

[package.metadata.deb]
name = "rioterm"
maintainer = "Raphael Amorim <rapha850@gmail.com>"
copyright = "2024, Raphael Amorim <rapha850@gmail.com>"
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["../../target/release/rio", "usr/local/bin/", "755"],
    ["../../misc/rio.desktop", "usr/share/applications/", "644"],
    ["../../misc/rio.terminfo", "usr/share/info/", "644"],
    ["../../misc/logo.svg", "usr/share/icons/hicolor/scalable/apps/rio.svg", "644"],
    ["../../README.md", "usr/share/doc/rio/", "644"],
    ["../../LICENSE", "usr/share/doc/rio/", "664"]
]
extended-description = """\
Rio terminal is a hardware-accelerated GPU terminal emulator, focusing to run in desktops and browsers.
The supported platforms currently consist of BSD, Linux, MacOS and Windows."""
